# src/modules/cars/entities/Specification.ts
@@ -1,7 +1,7 @@
 import { Column, PrimaryColumn, CreateDateColumn, Entity } from 'typeorm';
 import { v4 as uuidv4 } from 'uuid';
 
-@Entity('specification')
+@Entity('specifications')
 class Specification {
   @PrimaryColumn()
   id?: string;
