# src/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info":{
-    "title": "RentalX Documentation",
+    "title": "RentX Documentation",
     "description":"This is a API Rent",
     "version":"1.0.0",
     "contact": {
@@ -74,6 +74,73 @@
         }
 
       }
+    },
+    "/categories/import":{
+      "post":{
+        "tags":["Category"],
+        "summary":"Upload a new category",
+        "description":"Upload a new category",
+        "requestBody":{
+          "content":{
+            "multipart/form-data":{
+              "schema":{
+                "type":"object",
+                "properties":{
+                  "file": {
+                    "type":"string",
+                    "format":"binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses":{
+          "201":{
+            "descripiton":"Created"
+          }
+        }
+
+      }
+
+    },
+    "/specifications":{
+      "post":{
+        "tags":["Specifications"],
+        "summary":"Create a specificatio",
+        "description":"Create a new specification",
+        "requestBody":{
+          "content":{
+            "application/json":{
+              "schema":{
+                "$ref":"#/definitions/Specification"
+              }
+            }
+          }
+        },
+        "responses":{
+          "201" :{
+            "description":"Created"
+          },
+          "500":{
+            "description":"Specification already exists!"
+          }
+        }  
+      }      
     }
-  }
+  },
+  "definitions":{
+    "Specification":{
+      "type":"object",
+      "properties":{
+        "name":{
+          "type":"string"
+        },
+         "description":{
+          "Type":"string"
+        }
+      }
+    }
+  }  
 }
+
